overflow issue with tabs handled

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -2,6 +2,10 @@
     height: 100vh;
 }
 
+body {
+    height: 100%
+}
+
 html {
     font-size: 14px;
 }
